# field-manager-api

./: CHANGES.md  Demo.ipynb  pyproject.toml
.github/workflows/: branch.yaml
src/examples/: example.py
src/field_manager_api/: field_manager.py
src/field_manager_api/nadag/: nadag_api.py
src/field_manager_api/projects/: get_projects.py
src/field_manager_api/utils/: automatic_datarapport.py
tests/: test_fieldmanager_api.py
